# slack_team

./: .env  README.md  main.py  requirements.txt  test_requirements.txt  token.pickle
agents/: progress_agent.py  report_agent.py  spreadsheet_agent.py
aiagent/: pyproject.toml
aiagent/src/aiagent/: __init__.py
models/: schemas.py
services/: email_service.py  gemini_service.py  sheets_service.py  slack_service.py
src/: __init__.py
src/models/: __init__.py  team_member.py
