[project]
name = "aiagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Your Name", email = "nikhilk22@iitk.ac.in" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
aiagent = "aiagent:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
